--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,19 @@
   </properties>
 
   <dependencies>
+      <!-- https://mvnrepository.com/artifact/io.rest-assured/json-schema-validator -->
+      <dependency>
+          <groupId>io.rest-assured</groupId>
+          <artifactId>json-schema-validator</artifactId>
+          <version>5.3.0</version>
+          <scope>test</scope>
+      </dependency>
+
+     <dependency>
+    <groupId>com.networknt</groupId>
+    <artifactId>json-schema-validator</artifactId>
+    <version>1.0.72</version>
+</dependency>
   	<!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
 <dependency>
     <groupId>com.jayway.jsonpath</groupId>
